REF: move document OA\Info to Controller.php
